--- a/ImportExport/SampleImpExp/SampleImpExpCore/SampleImpExpCore.csproj
+++ b/ImportExport/SampleImpExp/SampleImpExpCore/SampleImpExpCore.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="PluginHelpers">
+      <HintPath>..\..\..\$(Configuration)\PluginHelpers.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
