--- a/UIExension/SampleUIExtension/SampleUIExtensionCore/SampleUIExtensionCore.csproj
+++ b/UIExension/SampleUIExtension/SampleUIExtensionCore/SampleUIExtensionCore.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="PluginHelpers">
+      <HintPath>..\..\..\$(Configuration)\PluginHelpers.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
