--- a/UIExension/StatsUIExtension/StatsUIExtensionCore/StatsUIExtensionCore.csproj
+++ b/UIExension/StatsUIExtension/StatsUIExtensionCore/StatsUIExtensionCore.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="PluginHelpers">
+      <HintPath>..\..\..\$(Configuration)\PluginHelpers.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
