Enable app preferences in TDL Tasklist importer

--- a/ToDoList/ToDoList.vcxproj
+++ b/ToDoList/ToDoList.vcxproj
@@ -318,6 +318,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="TDCToDoCtrlPreferenceHelper.cpp" />
     <ClCompile Include="TDCToolsCmdlineParser.cpp" />
     <ClCompile Include="TDCToolsHelper.cpp" />
     <ClCompile Include="TDCUIExtensionHelper.cpp">
@@ -628,6 +629,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClInclude Include="tdcstatic.h" />
     <ClInclude Include="tdcstruct.h" />
     <ClInclude Include="tdcswitch.h" />
+    <ClInclude Include="TDCToDoCtrlPreferenceHelper.h" />
     <ClInclude Include="TDCToolsCmdlineParser.h" />
     <ClInclude Include="TDCToolsHelper.h" />
     <ClInclude Include="TDCUIExtensionHelper.h" />
