More Outlook importer refactoring

--- a/3rdParty/3rdParty.vcxproj
+++ b/3rdParty/3rdParty.vcxproj
@@ -188,6 +188,7 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="msoutlookItem.cpp" />
     <ClCompile Include="msword.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -277,6 +278,7 @@
     <ClInclude Include="HMXDataset.h" />
     <ClInclude Include="Html2Rtf.h" />
     <ClInclude Include="Ini.h" />
+    <ClInclude Include="msoutlookItem.h" />
     <ClInclude Include="Quantize.h" />
     <ClInclude Include="Zlib\IOAPI.H" />
     <ClInclude Include="Zlib\IOWIN32.H" />
