More Outlook refactoring

--- a/3rdParty/3rdParty.vcxproj
+++ b/3rdParty/3rdParty.vcxproj
@@ -184,11 +184,7 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
-    <ClCompile Include="msoutl.cpp">
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
-    </ClCompile>
-    <ClCompile Include="msoutlookItem.cpp" />
+    <ClCompile Include="msoutl.cpp" />
     <ClCompile Include="msword.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -278,7 +274,6 @@
     <ClInclude Include="HMXDataset.h" />
     <ClInclude Include="Html2Rtf.h" />
     <ClInclude Include="Ini.h" />
-    <ClInclude Include="msoutlookItem.h" />
     <ClInclude Include="Quantize.h" />
     <ClInclude Include="Zlib\IOAPI.H" />
     <ClInclude Include="Zlib\IOWIN32.H" />
