--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -81,7 +81,7 @@ BEGIN
     CONTROL         "Exp&ort to one file",IDC_EXPORTONEFILE,"Button",BS_AUTOCHECKBOX | BS_TOP | WS_TABSTOP,239,8,138,21
 END
 
-IDD_PREFERENCES DIALOG 0, 0, 547, 295
+IDD_PREFERENCES DIALOGEX 0, 0, 547, 295
 STYLE DS_SETFONT | WS_POPUP | WS_CLIPCHILDREN | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "ToDoList Preferences"
 FONT 8, "Tahoma", 0, 0, 0x1
@@ -163,7 +163,7 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,18,280,366,10
 END
 
-IDD_PREFGEN_PAGE DIALOG 0, 0, 400, 438
+IDD_PREFGEN_PAGE DIALOGEX 0, 0, 400, 438
 STYLE DS_SETFONT | WS_CHILD
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
@@ -581,7 +581,7 @@ BEGIN
     PUSHBUTTON      "S&et...   ",IDC_SETREFERENCECOLOR,149,555,52,13,BS_RIGHT
 END
 
-IDD_PRINT_DIALOG DIALOG 0, 0, 487, 246
+IDD_PRINT_DIALOG DIALOGEX 0, 0, 487, 246
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Print Tasklist"
 FONT 8, "Tahoma", 0, 0, 0x0
@@ -684,7 +684,7 @@ BEGIN
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,7,121,294,1
 END
 
-IDD_TASKSELECTION_DIALOG DIALOG 0, 0, 369, 157
+IDD_TASKSELECTION_DIALOG DIALOGEX 0, 0, 369, 157
 STYLE DS_SETFONT | DS_NOIDLEMSG | DS_CONTROL | WS_CHILD | WS_VISIBLE
 EXSTYLE WS_EX_CONTROLPARENT
 FONT 8, "Tahoma", 0, 0, 0x1
@@ -721,7 +721,7 @@ BEGIN
     LTEXT           "Stylesheet not found",IDC_STYLESHEETNOTFOUND,236,41,140,8,NOT WS_VISIBLE
 END
 
-IDD_FILTER_BAR DIALOG 0, 0, 406, 169
+IDD_FILTER_BAR DIALOGEX 0, 0, 406, 169
 STYLE DS_SETFONT | DS_CONTROL | WS_CHILD | WS_VISIBLE | WS_CLIPCHILDREN
 EXSTYLE WS_EX_CONTROLPARENT
 FONT 8, "Tahoma", 0, 0, 0x1
@@ -881,7 +881,7 @@ BEGIN
     LTEXT           "Note: You can modify this choice later using 'Tools > Preferences'",IDC_STATIC,16,50,252,22
 END
 
-IDD_TASKICON_DIALOG DIALOG 0, 0, 375, 253
+IDD_TASKICON_DIALOG DIALOGEX 0, 0, 375, 253
 STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Select Task Icon"
 FONT 8, "Tahoma", 0, 0, 0x1
@@ -1072,21 +1072,21 @@ BEGIN
     LTEXT           "&Comment:",IDC_STATIC,7,103,65,8
 END
 
-IDD_CSVIMPORTEXPORT_DIALOG DIALOG 0, 0, 400, 270
+IDD_CSVIMPORTEXPORT_DIALOG DIALOG 0, 0, 299, 278
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
-FONT 8, "Tahoma", 0, 0, 0x0
+FONT 8, "Tahoma"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,288,249,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,343,249,50,14
-    CONTROL         "List1",IDC_COLUMNSETUP,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | LVS_OWNERDRAWFIXED | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,40,386,180
-    LTEXT           "&Csv delimiter",IDC_STATIC,326,7,67,8
-    EDITTEXT        IDC_CSVDELIMITER,327,19,66,14,ES_AUTOHSCROLL
-    LTEXT           "&File: ",IDC_STATIC,7,7,207,8
-    EDITTEXT        IDC_CSVFILEPATH,7,19,312,14,ES_AUTOHSCROLL | ES_READONLY
+    DEFPUSHBUTTON   "OK",IDOK,188,257,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,242,257,50,14
+    CONTROL         "List1",IDC_COLUMNSETUP,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | LVS_OWNERDRAWFIXED | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,42,285,187
+    LTEXT           "&Csv delimiter",IDC_STATIC,225,9,67,8
+    EDITTEXT        IDC_CSVDELIMITER,226,21,66,14,ES_AUTOHSCROLL
+    LTEXT           "&File: ",IDC_STATIC,7,9,207,8
+    EDITTEXT        IDC_CSVFILEPATH,7,21,209,14,ES_AUTOHSCROLL | ES_READONLY
     CONTROL         "&Always export task ID and Parent task ID",IDC_EXPORTTASKIDS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,226,174,10
-    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,7,242,386,1
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,8,234,174,10
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,7,250,285,1
 END
 
 IDD_LANGUAGE_DIALOG DIALOG 0, 0, 188, 62
@@ -1100,7 +1100,7 @@ BEGIN
     CONTROL         "",IDC_LANGUAGES,"ComboBoxEx32",CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP,7,21,174,188
 END
 
-IDD_TDLIMPORTEXPORT_DIALOG DIALOG 0, 0, 299, 289
+IDD_TDLIMPORTEXPORT_DIALOG DIALOGEX 0, 0, 299, 289
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Import Tasks From Tasklist"
 FONT 8, "Tahoma", 0, 0, 0x1
@@ -1130,18 +1130,18 @@ BEGIN
     LTEXT           "&ToDoList supports the following commandline options:",IDC_STATIC,7,7,387,10,SS_CENTERIMAGE
 END
 
-IDD_OUTLOOKMSGIMPORT_DIALOG DIALOG 0, 0, 400, 270
+IDD_OUTLOOKMSGIMPORT_DIALOG DIALOG 0, 0, 321, 224
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Create Tasks From Outlook"
-FONT 8, "Tahoma", 0, 0, 0x0
+FONT 8, "Tahoma"
 BEGIN
-    CONTROL         "List1",IDC_FIELDMAPPING,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | LVS_OWNERDRAWFIXED | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,386,199
-    CONTROL         "Hide &un-mapped attributes",IDC_HIDEUNMAPPED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,211,386,10
-    DEFPUSHBUTTON   "OK",IDOK,287,249,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,343,249,50,14
+    CONTROL         "List1",IDC_FIELDMAPPING,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_OWNERDRAWFIXED | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,307,152
+    CONTROL         "Hide &un-mapped attributes",IDC_HIDEUNMAPPED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,164,307,10
+    DEFPUSHBUTTON   "OK",IDOK,208,203,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,264,203,50,14
     CONTROL         "Hide &confidential attributes",IDC_HIDECONFIDENTIAL,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,226,386,10
-    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,7,242,386,1
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,179,307,10
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,7,195,307,1
 END
 
 IDD_ADDCUSTOMATTRIB_DIALOG DIALOG 0, 0, 422, 321
@@ -1200,7 +1200,7 @@ BEGIN
     EDITTEXT        IDC_NUMRECUR,196,137,40,13,ES_AUTOHSCROLL | ES_NUMBER
 END
 
-IDD_RECURRING_DAILY_PAGE DIALOG 0, 0, 254, 113
+IDD_RECURRING_DAILY_PAGE DIALOGEX 0, 0, 254, 113
 STYLE DS_SETFONT | WS_CHILD
 EXSTYLE WS_EX_CONTROLPARENT
 FONT 8, "Tahoma", 0, 0, 0x1
@@ -1214,7 +1214,7 @@ BEGIN
     LTEXT           "weekday(s)",IDC_STATIC,42,46,211,8
 END
 
-IDD_RECURRING_WEEKLY_PAGE DIALOG 0, 0, 254, 112
+IDD_RECURRING_WEEKLY_PAGE DIALOGEX 0, 0, 254, 112
 STYLE DS_SETFONT | WS_CHILD
 EXSTYLE WS_EX_CONTROLPARENT
 FONT 8, "Tahoma", 0, 0, 0x1
@@ -1228,7 +1228,7 @@ BEGIN
     LISTBOX         IDC_WEEKDAYS,10,61,243,30,LBS_OWNERDRAWFIXED | LBS_HASSTRINGS | LBS_NOINTEGRALHEIGHT | LBS_MULTICOLUMN | LBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_RECURRING_MONTHLY_PAGE DIALOG 0, 0, 254, 114
+IDD_RECURRING_MONTHLY_PAGE DIALOGEX 0, 0, 254, 114
 STYLE DS_SETFONT | WS_CHILD
 EXSTYLE WS_EX_CONTROLPARENT
 FONT 8, "Tahoma", 0, 0, 0x1
@@ -1249,7 +1249,7 @@ BEGIN
     LTEXT           "month(s)",IDC_STATIC,42,94,211,8
 END
 
-IDD_RECURRING_YEARLY_PAGE DIALOG 0, 0, 254, 113
+IDD_RECURRING_YEARLY_PAGE DIALOGEX 0, 0, 254, 113
 STYLE DS_SETFONT | WS_CHILD
 EXSTYLE WS_EX_CONTROLPARENT
 FONT 8, "Tahoma", 0, 0, 0x1
@@ -1310,7 +1310,7 @@ BEGIN
     EDITTEXT        IDC_OUTPUTFILEPATH,79,154,219,13,ES_AUTOHSCROLL
 END
 
-IDD_RECURRING_ONCE_PAGE DIALOG 0, 0, 254, 84
+IDD_RECURRING_ONCE_PAGE DIALOGEX 0, 0, 254, 84
 STYLE DS_SETFONT | WS_CHILD
 EXSTYLE WS_EX_CONTROLPARENT
 FONT 8, "Tahoma", 0, 0, 0x1
@@ -1380,7 +1380,7 @@ BEGIN
     CONTROL         "",-1,"Static",SS_ETCHEDHORZ,7,201,323,1
 END
 
-IDD_TIMETRACK_DIALOG DIALOG 0, 0, 134, 89
+IDD_TIMETRACK_DIALOG DIALOGEX 0, 0, 134, 89
 STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_STATICEDGE
 CAPTION "Time Tracker"
@@ -1397,24 +1397,24 @@ BEGIN
     CONTROL         "",IDC_TOOLBAR,"Static",SS_BLACKFRAME | NOT WS_VISIBLE | WS_DISABLED,4,3,31,14
 END
 
-IDD_IMPORT_OUTLOOK_DIALOG DIALOG 0, 0, 400, 270
+IDD_IMPORT_OUTLOOK_DIALOG DIALOG 0, 0, 301, 221
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Import Tasks From Outlook"
-FONT 8, "Tahoma", 0, 0, 0x0
+FONT 8, "Tahoma"
 BEGIN
     LTEXT           "Current folder:",IDC_STATIC,7,9,73,8
-    EDITTEXT        IDC_CURFOLDER,96,7,185,14,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "&Change...",IDC_CHOOSEFOLDER,288,7,50,14
-    LTEXT           "&Select items to import:",IDC_STATIC,7,29,230,8,SS_CENTERIMAGE
-    CONTROL         "Tree1",IDC_TASKLIST,"SysTreeView32",TVS_HASBUTTONS | TVS_HASLINES | TVS_LINESATROOT | TVS_DISABLEDRAGDROP | TVS_NOTOOLTIPS | TVS_CHECKBOXES | WS_BORDER | WS_HSCROLL | WS_TABSTOP,7,42,386,161
+    EDITTEXT        IDC_CURFOLDER,96,7,141,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "&Change...",IDC_CHOOSEFOLDER,244,7,50,14
+    LTEXT           "&Select items to import:",IDC_STATIC,7,28,230,8,SS_CENTERIMAGE
+    CONTROL         "Tree1",IDC_TASKLIST,"SysTreeView32",TVS_HASBUTTONS | TVS_HASLINES | TVS_LINESATROOT | TVS_DISABLEDRAGDROP | TVS_NOTOOLTIPS | TVS_CHECKBOXES | WS_BORDER | WS_TABSTOP,7,41,287,113
     CONTROL         "&Hide unflagged email items",IDC_HIDEUNFLAGGEDEMAIL,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,210,229,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,160,229,10
     CONTROL         "&Remove items from Outlook after importing",IDC_REMOVEOUTLOOKTASKS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,225,386,10
-    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,7,242,386,1
-    DEFPUSHBUTTON   "OK",IDOK,288,249,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,343,249,50,14
-    PUSHBUTTON      "&Refresh",2007,343,7,50,14
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,175,287,10
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,7,192,287,1
+    DEFPUSHBUTTON   "OK",IDOK,189,200,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,244,200,50,14
+    PUSHBUTTON      "&Refresh",2007,244,24,50,14
 END
 
 
@@ -3040,9 +3040,8 @@ BEGIN
     IDD_CSVIMPORTEXPORT_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 393
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 263
+        RIGHTMARGIN, 292
+        BOTTOMMARGIN, 271
     END
 
     IDD_LANGUAGE_DIALOG, DIALOG
@@ -3070,9 +3069,8 @@ BEGIN
     IDD_OUTLOOKMSGIMPORT_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 393
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 263
+        RIGHTMARGIN, 314
+        BOTTOMMARGIN, 217
     END
 
     IDD_ADDCUSTOMATTRIB_DIALOG, DIALOG
@@ -3147,9 +3145,9 @@ BEGIN
     IDD_IMPORT_OUTLOOK_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 393
+        RIGHTMARGIN, 294
         TOPMARGIN, 7
-        BOTTOMMARGIN, 263
+        BOTTOMMARGIN, 214
     END
 END
 #endif    // APSTUDIO_INVOKED
