VS compatibility fixes

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -84,7 +84,7 @@ END
 IDD_PREFERENCES DIALOG 0, 0, 547, 295
 STYLE DS_SETFONT | WS_POPUP | WS_CLIPCHILDREN | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "ToDoList Preferences"
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,436,274,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,490,274,50,14
@@ -165,7 +165,7 @@ END
 
 IDD_PREFGEN_PAGE DIALOG 0, 0, 400, 438
 STYLE DS_SETFONT | WS_CHILD
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     LTEXT           "&Display Language:",IDC_STATIC,7,10,376,10
     CONTROL         "",IDC_LANGUAGE,"ComboBoxEx32",CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP,7,22,194,158
@@ -584,7 +584,7 @@ END
 IDD_PRINT_DIALOG DIALOG 0, 0, 487, 246
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Print Tasklist"
-FONT 8, "Tahoma", 0, 0, 0x0
+FONT 8, "Tahoma"
 BEGIN
     LTEXT           "&Title",IDC_STATIC,7,9,28,8
     CONTROL         "T&oday's date",IDC_PRINTDATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,184,9,164,10
@@ -687,7 +687,7 @@ END
 IDD_TASKSELECTION_DIALOG DIALOG 0, 0, 369, 157
 STYLE DS_SETFONT | DS_NOIDLEMSG | DS_CONTROL | WS_CHILD | WS_VISIBLE
 EXSTYLE WS_EX_CONTROLPARENT
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     CONTROL         "&All tasks",IDC_ALLTASKS,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,7,12,98,10
     CONTROL         "&Filtered Tasks",IDC_FILTERTASKS,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,7,26,97,10
@@ -724,7 +724,7 @@ END
 IDD_FILTER_BAR DIALOG 0, 0, 406, 169
 STYLE DS_SETFONT | DS_CONTROL | WS_CHILD | WS_VISIBLE | WS_CLIPCHILDREN
 EXSTYLE WS_EX_CONTROLPARENT
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     LTEXT           "Sh&ow",IDC_FILTERLABEL,9,8,19,12,SS_CENTERIMAGE
     COMBOBOX        IDC_FILTERCOMBO,37,7,151,112,CBS_DROPDOWNLIST | CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP
@@ -884,7 +884,7 @@ END
 IDD_TASKICON_DIALOG DIALOG 0, 0, 375, 253
 STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Select Task Icon"
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     CONTROL         "List1",IDC_ICONLIST,"SysListView32",LVS_LIST | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_NOLABELWRAP | LVS_AUTOARRANGE | LVS_EDITLABELS | LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | WS_TABSTOP,7,7,361,192,WS_EX_CLIENTEDGE
     DEFPUSHBUTTON   "OK",IDOK,263,231,50,14
@@ -1075,7 +1075,7 @@ END
 IDD_CSVIMPORTEXPORT_DIALOG DIALOG 0, 0, 400, 270
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
-FONT 8, "Tahoma", 0, 0, 0x0
+FONT 8, "Tahoma"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,288,249,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,343,249,50,14
@@ -1103,7 +1103,7 @@ END
 IDD_TDLIMPORTEXPORT_DIALOG DIALOG 0, 0, 299, 289
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Import Tasks From Tasklist"
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,189,268,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,243,268,50,14
@@ -1133,7 +1133,7 @@ END
 IDD_OUTLOOKMSGIMPORT_DIALOG DIALOG 0, 0, 400, 270
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Create Tasks From Outlook"
-FONT 8, "Tahoma", 0, 0, 0x0
+FONT 8, "Tahoma"
 BEGIN
     CONTROL         "List1",IDC_FIELDMAPPING,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | LVS_OWNERDRAWFIXED | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,386,199
     CONTROL         "Hide &un-mapped attributes",IDC_HIDEUNMAPPED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,211,386,10
@@ -1203,7 +1203,7 @@ END
 IDD_RECURRING_DAILY_PAGE DIALOG 0, 0, 254, 113
 STYLE DS_SETFONT | WS_CHILD
 EXSTYLE WS_EX_CONTROLPARENT
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     CONTROL         "&Every",IDC_EVERY,"Button",BS_AUTORADIOBUTTON | WS_GROUP,0,0,253,10
     CONTROL         "&Every",IDC_EVERY2,"Button",BS_AUTORADIOBUTTON,0,31,253,10
@@ -1217,7 +1217,7 @@ END
 IDD_RECURRING_WEEKLY_PAGE DIALOG 0, 0, 254, 112
 STYLE DS_SETFONT | WS_CHILD
 EXSTYLE WS_EX_CONTROLPARENT
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     CONTROL         "&Every",IDC_RECREATE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,0,0,254,10
     CONTROL         "&Every",IDC_EVERY,"Button",BS_AUTORADIOBUTTON,0,31,254,10
@@ -1231,7 +1231,7 @@ END
 IDD_RECURRING_MONTHLY_PAGE DIALOG 0, 0, 254, 114
 STYLE DS_SETFONT | WS_CHILD
 EXSTYLE WS_EX_CONTROLPARENT
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     CONTROL         "&Every",IDC_RECREATE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,0,0,253,10
     CONTROL         "&Day",IDC_DAY,"Button",BS_AUTORADIOBUTTON,0,31,253,10
@@ -1252,7 +1252,7 @@ END
 IDD_RECURRING_YEARLY_PAGE DIALOG 0, 0, 254, 113
 STYLE DS_SETFONT | WS_CHILD
 EXSTYLE WS_EX_CONTROLPARENT
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     CONTROL         "&Every",IDC_RECREATE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,0,0,254,10
     CONTROL         "&Every",IDC_EVERY,"Button",BS_AUTORADIOBUTTON,0,31,253,10
@@ -1313,7 +1313,7 @@ END
 IDD_RECURRING_ONCE_PAGE DIALOG 0, 0, 254, 84
 STYLE DS_SETFONT | WS_CHILD
 EXSTYLE WS_EX_CONTROLPARENT
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     LTEXT           "This task does not repeat.",IDC_STATIC,0,0,182,8
 END
@@ -1384,7 +1384,7 @@ IDD_TIMETRACK_DIALOG DIALOG 0, 0, 134, 89
 STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_STATICEDGE
 CAPTION "Time Tracker"
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     COMBOBOX        IDC_TASKLISTS,4,28,126,128,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_TASKS,4,50,81,114,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
@@ -1400,7 +1400,7 @@ END
 IDD_IMPORT_OUTLOOK_DIALOG DIALOG 0, 0, 400, 270
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Import Tasks From Outlook"
-FONT 8, "Tahoma", 0, 0, 0x0
+FONT 8, "Tahoma"
 BEGIN
     LTEXT           "Current folder:",IDC_STATIC,7,9,73,8
     EDITTEXT        IDC_CURFOLDER,96,7,185,14,ES_AUTOHSCROLL | ES_READONLY
