--- a/BurndownExt/BurndownExt.rc
+++ b/BurndownExt/BurndownExt.rc
@@ -135,10 +135,11 @@ BEGIN
     LTEXT           "Dis&play",IDC_STATIC,0,2,159,8
     COMBOBOX        IDC_DISPLAY,0,12,79,118,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
-    CONTROL         "",IDC_GRAPH,"Static",SS_WHITERECT,15,46,252,206
     CONTROL         "",IDC_FRAME,"Static",SS_GRAYFRAME,0,31,314,250
     CONTROL         "",IDC_TB_PLACEHOLDER,"Static",SS_BLACKFRAME | NOT 
                     WS_VISIBLE,87,12,122,17
+    CONTROL         "",IDC_GRAPH,"Button",BS_OWNERDRAW | WS_TABSTOP,8,38,298,
+                    234
 END
 
 
