--- a/CalendarExt/CalendarExt.vcxproj.filters
+++ b/CalendarExt/CalendarExt.vcxproj.filters
@@ -62,6 +62,15 @@
     <None Include="res\minical_arrow_R.bmp">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="res\help_button.ico">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\toolbar.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="RES\toolbar_std.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
