--- a/GanttChartExt/GanttChartExt.vcxproj.filters
+++ b/GanttChartExt/GanttChartExt.vcxproj.filters
@@ -53,6 +53,9 @@
     <None Include="res\toolbar_std.bmp">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="res\help_button.ico">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GanttChartExt.rc">
