--- a/KanbanBoard/KanbanBoard.vcxproj.filters
+++ b/KanbanBoard/KanbanBoard.vcxproj.filters
@@ -89,6 +89,9 @@
     <None Include="res\toolbar.bmp">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="res\help_button.ico">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
